--- a/unfairtelegram.html
+++ b/unfairtelegram.html
@@ -194,7 +194,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<form>
 		<label style="font-size:1.0em;font-weight:bold;">Host:</label><input type="text" id="host" style="background:#333;color:#eee;" value=""/>&nbsp;
 		<label style="font-size:1.0em;font-weight:bold;">Tag:</label><input type="text" id="tag" style="background:#333;color:#eee;" value="&lt;script&gt;"/>&nbsp;
-		<label style="font-size:1.0em;font-weight:bold;">Object:</label><input type="text" id="obj" style="background:#333;color:#eee;" value="Props.pageProps.context.story.elements.story"/>&nbsp;
+		<label style="font-size:1.0em;font-weight:bold;">Object:</label><input type="text" id="obj" style="background:#333;color:#eee;" value="props.pageProps.context.story.bodyText"/>&nbsp;
 		<button value="go" style="background:#333;color:#eee;">GO</button><br />
 		<hr />
 		<textarea id="art" style="background:#333;color:#eee;" cols="80" rows="10"></textarea>
