--- a/unfairtelegram.html
+++ b/unfairtelegram.html
@@ -204,10 +204,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		One can think of an <b>object</b> as an <b>associative array</b> (a.k.a. map, dictionary, hash, lookup table). 
 		The <b>keys</b> in this <b>Array</b> are the names of the object's <b>properties.</b>
 		Let's say our <b>Object</b> is a list of <b>properties</b> that describe the characteristics of a document we are viewing. Let's name this Object "<b>props.</b>" 
-		To access the <b>properties</b> of "<b>props</b>" using the commonly used dot notation convention, we could, for example write the following accessor code: <Pre>props.pageProps.context.story.bodyText</Pre>
+		To access the <b>properties</b> of "<b>props</b>" using the commonly used dot notation convention, we could, for example write the following <a href="https://en.wikipedia.org/wiki/XPath">XPath</a> code: <Pre>props.pageProps.context.story.bodyText</Pre>
 		</p>	
 
 </div>
+
+
 
 <footer>Thanks</footer>
 
