--- a/speedway.html
+++ b/speedway.html
@@ -59,11 +59,11 @@ On this section of the website, you will find all sorts of useful goodies to sat
 		
 		<a target="viewer" href="images/Premier-Speedway-Facility-Map.png"><p>Venue Map</p></a>
 		
-		<br/><br/>
+		<br/>
 				
 		<a target="viewer" href="images/Courtesy-Bus_2024.png"><p>Courtesy Bus</p></a>
 		
-		<br/><br/>
+		<br/>
 		
 		<a target="viewer" href="https://speedwayaustralia.org">
 			<img src="https://www.speedwayaustralia.org/Content/Images/Speedway-Australia-510.png"  alt="Speedway Australia">
@@ -97,6 +97,8 @@ On this section of the website, you will find all sorts of useful goodies to sat
 		<a target="viewer" href="https://www.standard.net.au/">
 		<img src="https://www.standard.net.au/static/1705533139/sites/the-standard/images/masthead/masthead-underline.svg" alt="STANDARD Logo">
 		</a>
+		<br /><br />
+		<br /><br />
 	</td>
 
 <!-- VIEWING AREA -->
@@ -112,7 +114,13 @@ On this section of the website, you will find all sorts of useful goodies to sat
 <pre>Time: 10.00am - 12.00pm</pre>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3127.7405688176686!2d142.46628350000003!3d-38.3781226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6acd4c8a9ee7b741%3A0x775dcbc1da496634!2sWarrnambool%20Showgrounds%2C%20331%20Koroit%20St%2C%20Warrnambool%20VIC%203280!5e0!3m2!1sen!2sau!4v1705488796568!5m2!1sen!2sau" 
 	width="500" height="220" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-<br /><br />
 
+<br /><br />
+<h2>Current browser version of<br /> <img src="images/logo.png" /><br />
+ <iframe frameborder="0" src="https://itch.io/embed-upload/9085099?color=0f0f0f" allowfullscreen="" width="800" height="600"><a href="https://mahda.itch.io/scream">Play SCREAM on itch.io</a></iframe><br />
+A free speedway community project.<br />
+As seen in the </h2> <img src="https://www.standard.net.au/static/1705533139/sites/the-standard/images/masthead/masthead-underline.svg" alt="STANDARD Logo">
+<img src="images/scream_two_logo.png" /><br />
+<iframe width="560" height="315" src="https://www.youtube.com/embed/egLM6MtEaEE?si=uERfhbP7o9T4sMYJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 </body>
