--- a/speedway.html
+++ b/speedway.html
@@ -116,11 +116,12 @@ On this section of the website, you will find all sorts of useful goodies to sat
 	width="500" height="220" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 <br /><br />
-<h2>Current browser version of<br /> <img src="images/logo.png" /><br />
+<hr />
+<h2>Current browser version of<br /> <img width=200 src="images/logo.png" /><br />
  <iframe frameborder="0" src="https://itch.io/embed-upload/9085099?color=0f0f0f" allowfullscreen="" width="800" height="600"><a href="https://mahda.itch.io/scream">Play SCREAM on itch.io</a></iframe><br />
 A free speedway community project.<br />
-As seen in the </h2> <img src="https://www.standard.net.au/static/1705533139/sites/the-standard/images/masthead/masthead-underline.svg" alt="STANDARD Logo">
-<img src="images/scream_two_logo.png" /><br />
+As seen in the </h2> <img  src="https://www.standard.net.au/static/1705533139/sites/the-standard/images/masthead/masthead-underline.svg" alt="STANDARD Logo"><br />
+<img width=480 src="images/scream_two_logo.png" /><br />
 <iframe width="560" height="315" src="https://www.youtube.com/embed/egLM6MtEaEE?si=uERfhbP7o9T4sMYJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 </body>
