--- a/speedway.html
+++ b/speedway.html
@@ -65,6 +65,14 @@ On this section of the website, you will find all sorts of useful goodies to sat
 		
 		<br/>
 		
+		<a target="viewer" href="images/qual1.png"><p>Qualifying Night 1</p></a>
+		
+		<br/>
+		
+		<a target="viewer" href="images/qual2.png"><p>Qualifying Night 1</p></a>
+		
+		<br/>
+		
 		<a target="viewer" href="https://speedwayaustralia.org">
 			<img src="https://www.speedwayaustralia.org/Content/Images/Speedway-Australia-510.png"  alt="Speedway Australia">
 		</a>
