--- a/speedway.html
+++ b/speedway.html
@@ -65,11 +65,11 @@ On this section of the website, you will find all sorts of useful goodies to sat
 		
 		<br/>
 		
-		<a target="viewer" href="images/qual1.jpg"><p>Qualifying Night 1</p></a>
+		<a target="viewer" href="images/qual1.jpg"><p>Q Night 1</p></a>
 		
 		<br/>
 		
-		<a target="viewer" href="images/qual2.jpg"><p>Qualifying Night 1</p></a>
+		<a target="viewer" href="images/qual2.jpg"><p>Q Night 2</p></a>
 		
 		<br/>
 		
