--- a/speedway.html
+++ b/speedway.html
@@ -65,6 +65,10 @@ On this section of the website, you will find all sorts of useful goodies to sat
 		
 		<br/>
 		
+		<a target="viewer" href="images/entry.jpg"><p>Classic Entry</p></a>
+		
+		<br/>
+		
 		<a target="viewer" href="images/qual1.jpg"><p>Q Night 1</p></a>
 		
 		<br/>
