--- a/speedway.html
+++ b/speedway.html
@@ -69,6 +69,11 @@ On this section of the website, you will find all sorts of useful goodies to sat
 		
 		<br/>
 		
+		<a target="viewer" href="http://www.bom.gov.au/products/IDV60801/IDV60801.94837.shtml"><p>Current Weather</p></a>
+		
+		<br/>
+		
+		
 		<a target="viewer" href="images/qual1.jpg"><p>Q Night 1</p></a>
 		
 		<br/>
