--- a/speedway.html
+++ b/speedway.html
@@ -69,7 +69,7 @@ On this section of the website, you will find all sorts of useful goodies to sat
 		
 		<br/>
 		
-		<a target="viewer" href="http://www.bom.gov.au/products/IDV60801/IDV60801.94837.shtml"><p>Current Weather</p></a>
+		<a target="_blank" href="http://www.bom.gov.au/products/IDV60801/IDV60801.94837.shtml"><p>Current Weather</p></a>
 		
 		<br/>
 		
