--- a/speedway.html
+++ b/speedway.html
@@ -73,6 +73,9 @@ On this section of the website, you will find all sorts of useful goodies to sat
 		
 		<br/>
 		
+		<a target="viewer" href="noms2024.txt"><p>Nominations</p></a>
+		
+		<br/>
 		
 		<a target="viewer" href="images/qual1.jpg"><p>Q Night 1</p></a>
 		
