--- a/scream.html
+++ b/scream.html
@@ -32,7 +32,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NL6F28VS"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<div id="wrapper">
-		<h1>MAHDA.COM.AU</h1><br />
+<div id="wrapper_game">
+		<a href="/"><h1>MAHDA.COM.AU</h1></a><br />
 
 <iframe frameborder="0" src="https://itch.io/embed-upload/9085099?color=0f0f0f" allowfullscreen="" width="100%" style="width:100vh;height:100vh;"><a href="https://mahda.itch.io/scream">Play SCREAM on itch.io</a></iframe><br />
