--- a/scream.html
+++ b/scream.html
@@ -35,4 +35,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="wrapper_game">
 		<a href="/"><h1>MAHDA.COM.AU</h1></a><br />
 
-<iframe frameborder="0" src="https://itch.io/embed-upload/9085099?color=0f0f0f" allowfullscreen="" width="100%" style="width:100vh;height:100vh;"><a href="https://mahda.itch.io/scream">Play SCREAM on itch.io</a></iframe><br />
+<iframe frameborder="0" src="https://itch.io/embed-upload/9085099?color=0f0f0f" allowfullscreen="" width="100%" style="width:100vw;height:100vh;"><a href="https://mahda.itch.io/scream">Play SCREAM on itch.io</a></iframe><br />
