--- a/calendar.html
+++ b/calendar.html
@@ -36,3 +36,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<a href="/"><h1>MAHDA.COM.AU</h1></a><br />
 
 <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Australia%2FMelbourne&bgcolor=%23ffffff&showCalendars=0&showTz=0&showPrint=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<a href="https://calendar.google.com/calendar/u/0?cid=MjcxMmQ4MDJlOTc1YWJiOThjZWU2ZjUwZTQxZDg0MDRiNDNhYjY5ZjVlZDBhODcwN2M0ZWNlMmFlZjQwZWQyMUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t">Google Calendar</a>
