--- a/drivers.html
+++ b/drivers.html
@@ -223,7 +223,7 @@
 <body>
   <div class="header">
 	  <table><tr>
-		  <td><a href="https://mahda.itch.io/scream"></a><img src="logo_new_white.png" height=90/></a><br /></td>
+		  <td><a href="https://mahda.itch.io/scream"><img src="logo_new_white.png" height=90/></a><br /></td>
 			<td>
 			<div class="controls">
       <div class="search-container">
