--- a/drivers.html
+++ b/drivers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Driver Trading Cards</title>
+  <title>SCREAM Sprintcar Driver Database</title>
   <style>
     * {
       margin: 0;
